<resources>
    <string name="app_name">MyApplication_final</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_watch">Watch</string>
    <string name="title_card">Card</string>
    <string name="title_city">City</string>
    <string name="title_hello">Hello</string>
    <string name="welcome">Welcome to APP</string>
    <string name="timer">00:00:00</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="restart">restart</string>
    <string name="fifth_Activity">fifth Activity</string>
    <string name="score">Score:</string>
    <string name="reset">Reset</string>
    <string name="a">A*</string>
    <string name="textview">textView</string>
    <string name="play">play</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="pause">pause</string>
    <string name="textView2">America</string>
    <string name="button">Click me</string>
    <string name="textView">Hello world!</string>
    <string name="clicked">I am clicked!</string>

</resources>