<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_hello"
        android:icon="@drawable/ic_baseline_accessibility_new_24"
        android:title="@string/title_hello" />

    <item
        android:id="@+id/navigation_watch"
        android:icon="@drawable/ic_baseline_watch_later_24"
        android:title="@string/title_watch" />

    <item
        android:id="@+id/navigation_card"
        android:icon="@drawable/ic_baseline_casino_24"
        android:title="@string/title_card" />

    <item
        android:id="@+id/navigation_city"
        android:icon="@drawable/ic_baseline_location_city_24"
        android:title="@string/title_city" />



</menu>